examples/nginx_deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nginx
spec: {}
status: {}

...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-nc
  name: nginx
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-nc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-nc
    spec:
      containers:
      - image: ghcr.io/michaeltrip/nginx-nc:latest
        args: ["-s"]
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}

...
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    app: nginx

...
