examples/postgresql_deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: postgresql
spec: {}
status: {}

...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: postgresql
  name: postgresql
  namespace: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgresql
    spec:
      containers:
      - image: ghcr.io/michaeltrip/postgres-nc:latest
        name: postgres-nc
        ports:
        - containerPort: 5432
        resources: {}
status: {}

...
---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: postgresql
  name: postgresql
  namespace: postgresql
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  type: ClusterIP
  selector:
    app: postgresql

...
